# llama-benchmark

./: .gitignore  AGENTS.md  README.md  RESULTS.md  driver.sh  pyproject.toml  run-benchmark.sh
benchmark_results_kris/20260714-202039-qwen3.6-27b-bf16-turbo3-symmetric-on/: results.csv  summary.txt
benchmark_results_kris/20260714-211649-qwen3.6-27b-bf16-turbo3-symmetric-off/: results.csv  summary.txt
benchmark_results_kris/20260714-214301-qwen3.6-27b-bf16-turbo4-symmetric-on/: results.csv  summary.txt
benchmark_results_kris/20260714-221118-qwen3.6-27b-bf16-turbo4-symmetric-off/: results.csv  summary.txt
benchmark_results_kris/20260714-223905-qwen3.6-27b-q4_k_m-turbo3-symmetric-on/: results.csv  summary.txt
benchmark_results_kris/20260714-225551-qwen3.6-27b-q4_k_m-turbo3-symmetric-off/: results.csv  summary.txt
benchmark_results_kris/20260714-231500-qwen3.6-27b-q4_k_m-turbo4-symmetric-on/: results.csv  summary.txt
benchmark_results_kris/20260714-233443-qwen3.6-27b-q4_k_m-turbo4-symmetric-off/: results.csv  summary.txt
benchmark_results_kris/20260714-235406-qwen3.6-27b-q6_k-turbo3-symmetric-on/: results.csv  summary.txt
benchmark_results_kris/20260715-001557-qwen3.6-27b-q6_k-turbo3-symmetric-off/: results.csv  summary.txt
benchmark_results_kris/20260715-003734-qwen3.6-27b-q6_k-turbo4-symmetric-on/: results.csv  summary.txt
developer/2026-07-14-convert-to-python/: acceptance.md  dependency-policy.md  tickets.md  (+2 more)
spec/: run_benchmark_spec.sh
tests/: test_cli.py  test_integration.py  test_reporting.py  test_requests.py  test_scenarios.py  test_server.py
(+833 files in other folders)
